src/Parser/Parser.java
package Parser;

import Lexer.Lexer;
import Lexer.Lexer.TokenType;
import Lexer.Token;

import java.util.ArrayList;

/*
do typecasting functions in expression, make sure to throw exception in expression class
RangeExpr should be added to tree

He's scaring me :') think about the message
for statements later
1. Is return type optional or not?
2. 'property', 'protected', 'public' single defined block?                  yes
3. 'in out' allowed or only 'inout'                                         do one token
4. '!=' allowed? I do not want '<>' :)                                      !=
5. ':<' | '>:' still allowed? Or replace with keywords 'min' | 'max'        later issue
6. Does main have a return type?
7. Anonymous blocks allowed?                                                yes
8. List commands removed?                                                   later issue
9. Refs are gone?                                                              later issue
10. What is 'as?' keyword                   checks if var can be typecasted, create new typecasted var
11. Constructor, use ':' instead of '='?    yes
12. Instantiate object without fields   2 constructors (default/arguments) hash table approach wit this one
*/

public class Parser {
    private final Lexer input;
    private final int k;              // k = # of lookaheads
    private int lookPos;
    private final Token[] lookaheads;

    public Parser(Lexer input) {
        this.input = input;
        this.k = 3;
        this.lookPos = 0;
        this.lookaheads = new Token[k];
        for(int i = 0; i < k; i++)
            consume();
    }

    private void consume() {
        lookaheads[lookPos] = this.input.nextToken();
        lookaheads[lookPos].asString();
        lookPos = (lookPos + 1) % k;
    }

    private void match(TokenType expectedTok) {
        if(nextLA(expectedTok)) consume();
        else throw new IllegalArgumentException("\nWarning! Expected " + expectedTok + ", but got " + currentLA(0).getTokenType());
    }

    // currentLA : Returns the current token we are checking
    private Token currentLA(int nextPos) { return lookaheads[(lookPos+nextPos)%k]; }

    // nextLA : Returns the next LA at the specified index
    private boolean nextLA(TokenType expectedTok) { return currentLA(0).getTokenType() == expectedTok; }

    private boolean nextLA(TokenType expectedTok, int nextPos) { return currentLA(nextPos).getTokenType() == expectedTok; }

    private boolean anyLA(ArrayList<TokenType> tokens, int nextPos) {
        for(TokenType expectedTok : tokens) {
            if(nextLA(expectedTok,nextPos)) return true;
        }
        return false;
    }

    private boolean anyLA(ArrayList<TokenType> tokens) {
        for(TokenType expectedTok : tokens) {
            if(nextLA(expectedTok)) return true;
        }
        return false;
    }

    private ArrayList<TokenType> expectedEnumToks() {
        ArrayList<TokenType> expectedToks = new ArrayList<TokenType>();
        expectedToks.add(TokenType.ID);
        expectedToks.add(TokenType.LIST);
        expectedToks.add(TokenType.TUPLE);
        expectedToks.add(TokenType.STRING);
        expectedToks.add(TokenType.REAL);
        expectedToks.add(TokenType.INT);
        expectedToks.add(TokenType.CHAR);
        expectedToks.add(TokenType.BOOL);
        return expectedToks;
    }

    private ArrayList<TokenType> expectedClassToks() {
        ArrayList<TokenType> expectedTok = new ArrayList<TokenType>();
        expectedTok.add(TokenType.PROPERTY);
        expectedTok.add(TokenType.PROTECTED);
        expectedTok.add(TokenType.PUBLIC);
        return expectedTok;
    }

    private ArrayList<TokenType> expectedBodyToks() {
        ArrayList<TokenType> expectedToks = new ArrayList<TokenType>();
        expectedToks.add(TokenType.COUT);
        expectedToks.add(TokenType.CIN);
        expectedToks.add(TokenType.CHOICE);
        expectedToks.add(TokenType.DO);
        expectedToks.add(TokenType.FOR);
        expectedToks.add(TokenType.WHILE);
        expectedToks.add(TokenType.IF);
        expectedToks.add(TokenType.LBRACE);
        expectedToks.add(TokenType.SET);
        expectedToks.add(TokenType.RETURN);
        expectedToks.add(TokenType.STRING);
        expectedToks.add(TokenType.REAL);
        expectedToks.add(TokenType.INT);
        expectedToks.add(TokenType.CHAR);
        expectedToks.add(TokenType.BOOL);
        expectedToks.add(TokenType.TILDE);
        expectedToks.add(TokenType.NOT);
        expectedToks.add(TokenType.LPAREN);
        expectedToks.add(TokenType.ID);
        expectedToks.add(TokenType.NEW);
        expectedToks.add(TokenType.LBRACK);
        expectedToks.add(TokenType.TUPLE);
        expectedToks.add(TokenType.ARRAY);
        expectedToks.add(TokenType.LIST);
        expectedToks.add(TokenType.TEXT_LIT);
        expectedToks.add(TokenType.STR_LIT);
        expectedToks.add(TokenType.REAL_LIT);
        expectedToks.add(TokenType.INT_LIT);
        expectedToks.add(TokenType.CHAR_LIT);
        expectedToks.add(TokenType.BOOL_LIT);
        return expectedToks;
    }

    private ArrayList<TokenType> firstSetExpression() {
        ArrayList<TokenType> expectedToks = new ArrayList<TokenType>();
        expectedToks.add(TokenType.CAST);
        expectedToks.add(TokenType.LENGTH);
        expectedToks.add(TokenType.SLICE);
        expectedToks.add(TokenType.ID);
        expectedToks.add(TokenType.LPAREN);
        expectedToks.add(TokenType.LBRACK);
        expectedToks.add(TokenType.ARRAY);
        expectedToks.add(TokenType.LIST);
        expectedToks.add(TokenType.TUPLE);
        expectedToks.add(TokenType.STR_LIT);
        expectedToks.add(TokenType.TEXT_LIT);
        expectedToks.add(TokenType.REAL_LIT);
        expectedToks.add(TokenType.INT_LIT);
        expectedToks.add(TokenType.CHAR_LIT);
        expectedToks.add(TokenType.BOOL_LIT);

        return expectedToks;
    }

    private ArrayList<TokenType> expectedPostfixToks() {
        ArrayList<TokenType> expectedToks = new ArrayList<TokenType>();
        expectedToks.add(TokenType.LBRACK);
        expectedToks.add(TokenType.LPAREN);
        expectedToks.add(TokenType.ELVIS);
        expectedToks.add(TokenType.PERIOD);
        return expectedToks;
    }

    private ArrayList<TokenType> expectedCastToks() {
        ArrayList<TokenType> expectedToks = new ArrayList<TokenType>();
        expectedToks.add(TokenType.STRING);
        expectedToks.add(TokenType.REAL);
        expectedToks.add(TokenType.INT);
        expectedToks.add(TokenType.CHAR);
        expectedToks.add(TokenType.BOOL);
        return expectedToks;
    }

    private ArrayList<TokenType> expectedMultiplicationToks() {
        ArrayList<TokenType> expectedToks = new ArrayList<TokenType>();
        expectedToks.add(TokenType.MULT);
        expectedToks.add(TokenType.DIV);
        expectedToks.add(TokenType.MOD);
        return expectedToks;
    }

    private ArrayList<TokenType> expectedAdditiveToks() {
        ArrayList<TokenType> expectedToks = new ArrayList<TokenType>();
        expectedToks.add(TokenType.PLUS);
        expectedToks.add(TokenType.MINUS);
        return expectedToks;
    }

    private ArrayList<TokenType> expectedRelationalToks() {
        ArrayList<TokenType> tokList = new ArrayList<TokenType>();
        tokList.add(TokenType.LT);
        tokList.add(TokenType.GT);
        tokList.add(TokenType.LTEQ);
        tokList.add(TokenType.GTEQ);
        return tokList;
    }

    private ArrayList<TokenType> expectedShiftToks() {
        ArrayList<TokenType> expectedTok = new ArrayList<TokenType>();

        expectedTok.add(TokenType.SLEFT);
        expectedTok.add(TokenType.SRIGHT);
        return expectedTok;
    }


    /*
    ------------------------------------------------------------
                          COMPILATION UNIT
    ------------------------------------------------------------
    */

    // 1. compilation ::= file_merge* enum_type* global_variable* class_type* function* main
    public void compilation() {
        while(nextLA(TokenType.INCLUDE) || nextLA(TokenType.EXCLUDE))
            fileMerge();

        while(nextLA(TokenType.DEF) && nextLA(TokenType.ID,1))
            enumType();

        while(nextLA(TokenType.DEF) && (nextLA(TokenType.CONST, 1) || nextLA(TokenType.GLOBAL, 1)))
            globalVariable();

        while(nextLA(TokenType.ABSTR) || nextLA(TokenType.FINAL) || nextLA(TokenType.CLASS))
            classType();

        while((nextLA(TokenType.DEF)) && !nextLA(TokenType.MAIN,1))
                function();

        mainFunc();

        if(!nextLA(TokenType.EOF))
            System.out.println("EOF Not Reached.");
    }


    /*
    ------------------------------------------------------------
                          COMPILER DIRECTIVES
    ------------------------------------------------------------
    */


    // 2. file_merge ::= '#include' filename choice? rename?
    //                 | '#exclude' choice
    private void fileMerge() {
        if(nextLA(TokenType.INCLUDE)) {
            match(TokenType.INCLUDE);
            fileName();
            if(nextLA(TokenType.ONLY)) choice();
            if(nextLA(TokenType.RENAME)) rename();
        }
        else {
            match(TokenType.EXCLUDE);
            choice();
        }
    }


    // 3. filename ::= STRING_LITERAL
    private void fileName() { match(TokenType.STR_LIT); }


    // 4. choice ::= 'only' '{' global_id ( ',' global_id )* '}'
    //             | 'except' '{' global_id ( ',' global_id )* '}'
    private void choice() {
        if(nextLA(TokenType.ONLY)) {
            match(TokenType.ONLY);
            match(TokenType.LBRACE);
            globalID();
            while(nextLA(TokenType.COMMA)) {
                match(TokenType.COMMA);
                globalID();
            }
            match(TokenType.RBRACE);
        }
        else {
            match(TokenType.EXCEPT);
            match(TokenType.LBRACE);
            globalID();
            while(nextLA(TokenType.COMMA)) {
                match(TokenType.COMMA);
                globalID();
            }
            match(TokenType.RBRACE);
        }
    }


    // 5. global_id ::= ID
    private void globalID() {
        match(TokenType.ID);
    }


    // 6. rename ::= 'rename' '{' change_id ( ',' change_id )* '}'
    private void rename() {
        match(TokenType.RENAME);
        match(TokenType.LBRACE);
        changeID();
        while(nextLA(TokenType.COMMA)) {
            match(TokenType.COMMA);
            changeID();
        }
        match(TokenType.RBRACE);
    }


    // 7. change-id ::= ID => ID
    private void changeID() {
        match(TokenType.ID);
        match(TokenType.ARROW);
        match(TokenType.ID);
    }


    /*
    ------------------------------------------------------------
                          ENUM DECLARATION
    ------------------------------------------------------------
    */


    // 8. enum_type ::= 'def' ID type? 'type' '=' '{' enum_field ( ',' , enum_field)* '}'
    private void enumType() {
        match(TokenType.DEF);
        match(TokenType.ID);
        ArrayList<TokenType> ID_LIST_TUPLE_STRING_REAL_INT_CHAR_BOOL = expectedEnumToks();
        if(anyLA(ID_LIST_TUPLE_STRING_REAL_INT_CHAR_BOOL)) type();

        match(TokenType.TYPE);
        match(TokenType.EQ);
        match(TokenType.LBRACE);

        enumField();

        while(nextLA(TokenType.COMMA)) {
            match(TokenType.COMMA);
            enumField();
        }
        match(TokenType.RBRACE);
    }


    // 9. enum_field ::= 'ID' ( '=' constant )?
    private void  enumField() {
        match(TokenType.ID);
        if(nextLA(TokenType.EQ)) {
            match(TokenType.EQ);
            constant();
        }
    }


    /*
    ------------------------------------------------------------
              GLOBAL VARIABLES AND VARIABLE DECLARATIONS
    ------------------------------------------------------------
    */


    // 10. global_variable ::= 'def' ( 'const' | 'global' ) variable_decl
    private void globalVariable() {
        match(TokenType.DEF);
        if(nextLA(TokenType.CONST)) match(TokenType.CONST);
        else match(TokenType.GLOBAL);
        variableDecl();
    }


    // 11. variable_decl ::= variable_decl_list
    private void variableDecl() { variableDeclList(); }


    // 12. variable_decl_list ::= variable_decl_init ( ',' variable_decl_init )* type
    private void variableDeclList() {
        variableDeclInit();
        while(nextLA(TokenType.COMMA)) {
            match(TokenType.COMMA);
            variableDeclInit();
        }
        type();
    }


    // 13. variable_decl_init ::= ID ( '=' ( expression | 'uninit' ) )?
    private void variableDeclInit() {
        match(TokenType.ID);
        if(nextLA(TokenType.EQ)) {
            match(TokenType.EQ);
            if(nextLA(TokenType.UNINIT)) match(TokenType.UNINIT);
            else expression();
        }
    }


    /*
    ------------------------------------------------------------
                                TYPES
    ------------------------------------------------------------
    */


    // 14. type ::= scalar_type
    //            | class_name
    //            | 'List' '[' type ']'
    //            | 'Tuple' '<' type ( ',' type )* '>'
    private void type() {
        if(nextLA(TokenType.ID))
            className();
        else if(nextLA(TokenType.LIST)) {
            match(TokenType.LIST);
            match(TokenType.LBRACK);
            type();
            match(TokenType.RBRACK);
        }
        else if(nextLA(TokenType.TUPLE)) {
            match(TokenType.TUPLE);
            match(TokenType.LT);
            type();
            while(nextLA(TokenType.COMMA)) {
                match(TokenType.COMMA);
                type();
            }
            match(TokenType.GT);
        }
        else scalarType();
    }


    // 15. scalar_type ::= discrete_type
    //                   | 'String' ( '[' INT_LITERAL ']' )*
    //                   | 'Real' ( ':' INT_LITERAL )? ( '[' INT_LITERAL ']' )*
    private void scalarType() {
        if(nextLA(TokenType.STRING)) {
            match(TokenType.STRING);
            while(nextLA(TokenType.LBRACK)) {
                match(TokenType.LBRACK);
                match(TokenType.INT_LIT);
                match(TokenType.RBRACK);
            }
        }
        else if(nextLA(TokenType.REAL)) {
            match(TokenType.REAL);
            if(nextLA(TokenType.COLON)) {
                match(TokenType.COLON);
                match(TokenType.INT_LIT);
            }
            while(nextLA(TokenType.LBRACK)) {
                match(TokenType.LBRACK);
                match(TokenType.INT_LIT);
                match(TokenType.RBRACK);
            }
        }
        else discreteType();
    }


    // 16. discrete_type ::= 'Bool' ( '[' INT_LITERAL ']' )*
    //                     | 'Int' ( ':' INT_LITERAL '..' INT_LITERAL )? ( '[' INT_LITERAL ']' )*
    //                     | 'Char' ( ':' CHAR_LITERAL '..' CHAR_LITERAL )? ( '[' INT_LITERAL ']' )*
    private void discreteType() {
        if(nextLA(TokenType.BOOL)) {
            match(TokenType.BOOL);
            while(nextLA(TokenType.LBRACK)) {
                match(TokenType.LBRACK);
                match(TokenType.INT_LIT);
                match(TokenType.RBRACK);
            }
        }
        else if(nextLA(TokenType.INT)) {
            match(TokenType.INT);
            if(nextLA(TokenType.COLON)) {
                match(TokenType.COLON);
                match(TokenType.INT_LIT);
                match(TokenType.INC);
                match(TokenType.INT_LIT);
            }
            while(nextLA(TokenType.LBRACK)) {
                match(TokenType.LBRACK);
                match(TokenType.INT_LIT);
                match(TokenType.RBRACK);
            }
        }
        else if(nextLA(TokenType.CHAR)) {
            match(TokenType.CHAR);
            if(nextLA(TokenType.COLON)) {
                match(TokenType.COLON);
                match(TokenType.CHAR_LIT);
                match(TokenType.INC);
                match(TokenType.CHAR_LIT);
            }
            while(nextLA(TokenType.LBRACK)) {
                match(TokenType.LBRACK);
                match(TokenType.INT_LIT);
                match(TokenType.RBRACK);
            }
        }
        else throw new IllegalStateException("Error! Invalid type entered!");
    }


    // 17. class_name ::= ID ( '<' type ( ',' type )* '>' )?
    private void className() {
        match(TokenType.ID);
        if(nextLA(TokenType.LT)) {
            match(TokenType.LT);
            type();
            while(nextLA(TokenType.COMMA)) {
                match(TokenType.COMMA);
                type();
            }
            match(TokenType.GT);
        }
    }


    /*
    ------------------------------------------------------------
                          CLASS DECLARATION
    ------------------------------------------------------------
    */


    // 18. class_type ::= ( 'abstr' | 'final' )? 'class' ID type_params? super_class? class_body
    private void classType() {
        if(nextLA(TokenType.ABSTR)) match(TokenType.ABSTR);
        else if(nextLA(TokenType.FINAL)) match(TokenType.FINAL);

        match(TokenType.CLASS);
        match(TokenType.ID);

        if(nextLA(TokenType.LT)) typeParams();
        if(nextLA(TokenType.INHERITS)) superClass();

        classBody();
    }


    // 19. type_params ::= '<' type ( ',' type )* '>'
    private void typeParams() {
        match(TokenType.LT);
        type();
        while(nextLA(TokenType.COMMA)) {
            match(TokenType.COMMA);
            type();
        }
        match(TokenType.GT);
    }


    // 20. super_class ::= 'inherits' ID type_params?
    private void superClass() {
        match(TokenType.INHERITS);
        match(TokenType.ID);
        if(nextLA(TokenType.LT)) typeParams();
    }


    // 21. class_body ::= '{' data_decl* method_decl* '}'
    private void classBody() {
        match(TokenType.LBRACE);

        ArrayList<TokenType> PROPERTY_PROTECTED_PUBLIC = expectedClassToks();
        while(anyLA(PROPERTY_PROTECTED_PUBLIC) && nextLA(TokenType.ID,1))
            dataDecl();
        while(nextLA(TokenType.PROTECTED) || nextLA(TokenType.PUBLIC))
            methodDecl();

        match(TokenType.RBRACE);
    }



    /*
    ------------------------------------------------------------
                          FIELD DECLARATION
    ------------------------------------------------------------
    */


    // 22. data_decl ::= ( 'property' | 'protected' | 'public' ) variable_decl
    private void dataDecl() {
        if(nextLA(TokenType.PROPERTY)) match(TokenType.PROPERTY);
        else if(nextLA(TokenType.PROTECTED)) match(TokenType.PROTECTED);
        else match(TokenType.PUBLIC);

        variableDecl();
    }


    /*
    ------------------------------------------------------------
                          METHOD DECLARATION
    ------------------------------------------------------------
    */


    // 23. method_decl ::= method_class | operator_class
    private void methodDecl() {
        if(nextLA(TokenType.OPERATOR,1) || nextLA(TokenType.OPERATOR,2))
            operatorClass();
        else methodClass();
    }


    // 24. method_class ::= method_modifier attribute* 'override'? 'method' method_header '=>' return_type block_statement
    private void methodClass() {
        methodModifier();

        while(nextLA(TokenType.FINAL) || nextLA(TokenType.PURE) || nextLA(TokenType.RECURS))
            attribute();

        if(nextLA(TokenType.OVERRIDE)) match(TokenType.OVERRIDE);

        match(TokenType.METHOD);
        methodHeader();
        match(TokenType.ARROW);
        returnType();
        blockStatement();
    }


    // 25. method_modifier : 'protected' | 'public' ;
    private void methodModifier() {
        if(nextLA(TokenType.PROTECTED)) match(TokenType.PROTECTED);
        else if(nextLA(TokenType.PUBLIC)) match(TokenType.PUBLIC);
        else throw new IllegalStateException("Error! Invalid method modifier.");
    }


    // 26. attribute ::= 'final' | 'pure' | 'recurs'
    private void attribute() {
        if(nextLA(TokenType.FINAL)) match(TokenType.FINAL);
        else if(nextLA(TokenType.PURE)) match(TokenType.PURE);
        else match(TokenType.RECURS);
    }


    // 27. method-header ::= ID '(' formal-params? ')'
    private void methodHeader() {
        match(TokenType.ID);
        match(TokenType.LPAREN);
        if(nextLA(TokenType.IN) || nextLA(TokenType.OUT) || nextLA(TokenType.INOUT) || nextLA(TokenType.REF))
                formalParams();
        match(TokenType.RPAREN);
    }


    // 28. formal_params : param_modifier Name type ( ',' param_modifier Name type)*
    private void formalParams() {
        paramModifier();
        match(TokenType.ID);
        type();

        while(nextLA(TokenType.COMMA)) {
            match(TokenType.COMMA);
            paramModifier();
            match(TokenType.ID);
            type();
        }
    }


    // 29. param_modifier : 'in' | 'out' | 'inout' | 'ref'
    private void paramModifier() {
        if(nextLA(TokenType.IN)) match(TokenType.IN);
        else if(nextLA(TokenType.OUT)) match(TokenType.OUT);
        else if(nextLA(TokenType.INOUT)) match(TokenType.INOUT);
        else if(nextLA(TokenType.IN) && nextLA(TokenType.OUT,1)) {
            match(TokenType.IN);
            match(TokenType.OUT);
        }
        else if(nextLA(TokenType.REF)) match(TokenType.REF);
        else throw new IllegalStateException("Error! Invalid parameter type was given.");
    }


    // 30. return-type ::= Void | type
    private void returnType() {
        if(nextLA(TokenType.VOID))
            match(TokenType.VOID);
        else type();
    }


    // 31. operator_class : operator_modifier 'final'? 'operator' operator_header '=>' return_type block_statement
    private void operatorClass() {
        methodModifier();

        if(nextLA(TokenType.FINAL)) match(TokenType.FINAL);

        match(TokenType.OPERATOR);
        operatorHeader();
        match(TokenType.ARROW);
        returnType();
        blockStatement();
    }


    // 32. operator_header ::= operator_symbol '(' formal-params? ')'
    private void operatorHeader() {
        operatorSymbol();

        match(TokenType.LPAREN);
        if(nextLA(TokenType.IN) || nextLA(TokenType.OUT) || nextLA(TokenType.INOUT) || nextLA(TokenType.REF))
            formalParams();
        match(TokenType.RPAREN);
    }


    // 33. operator_symbol ::= binary_operator | unary_operator
    private void operatorSymbol() {
        if(nextLA(TokenType.TILDE) || nextLA(TokenType.NOT))
            unaryOperator();
        else binaryOperator();
    }


    // 34. binary_operator ::= <= | < | > | >= | == | <> | <=> | <: | :> | + | - | * | / | % | **
    private void binaryOperator() {
        if(nextLA(TokenType.LTEQ)) match(TokenType.LTEQ);
        else if(nextLA(TokenType.LT)) match(TokenType.LT);
        else if(nextLA(TokenType.GT)) match(TokenType.GT);
        else if(nextLA(TokenType.GTEQ)) match(TokenType.GTEQ);
        else if(nextLA(TokenType.EQEQ)) match(TokenType.EQEQ);
        else if(nextLA(TokenType.LTGT)) match(TokenType.LTGT);
        else if(nextLA(TokenType.UFO)) match(TokenType.UFO);
        else if(nextLA(TokenType.MIN)) match(TokenType.MIN);
        else if(nextLA(TokenType.MAX)) match(TokenType.MAX);
        else if(nextLA(TokenType.PLUS)) match(TokenType.PLUS);
        else if(nextLA(TokenType.MINUS)) match(TokenType.MINUS);
        else if(nextLA(TokenType.MULT)) match(TokenType.MULT);
        else if(nextLA(TokenType.DIV)) match(TokenType.DIV);
        else if(nextLA(TokenType.MOD)) match(TokenType.MOD);
        else if(nextLA(TokenType.EXP)) match(TokenType.EXP);
        else throw new IllegalStateException("Error! Invalid Binary Operator");
    }


    // 35. unary-operator ::= ~ | not
    private void unaryOperator() {
        if(nextLA(TokenType.TILDE)) match(TokenType.TILDE);
        else match(TokenType.NOT);
    }


    /*
    ------------------------------------------------------------
                        FUNCTION DECLARATION
    ------------------------------------------------------------
    */


    // 36. function ::= 'def' ( 'pure' | 'recurs' )? function_header '=>' return_type block_statement
    private void function() {
        match(TokenType.DEF);

        if(nextLA(TokenType.PURE)) match(TokenType.PURE);
        else if(nextLA(TokenType.RECURS)) match(TokenType.RECURS);

        functionHeader();
        match(TokenType.ARROW);
        returnType();
        blockStatement();
    }


    // 37. function_header ::= ID function_type_params? '(' formal_params? ')'
    private void functionHeader() {
        match(TokenType.ID);

        if(nextLA(TokenType.LT)) functionTypeParams();

        match(TokenType.LPAREN);
        if(nextLA(TokenType.IN) || nextLA(TokenType.OUT) || nextLA(TokenType.INOUT) || nextLA(TokenType.REF))
            formalParams();
        match(TokenType.RPAREN);
    }


    // 38. function_type_params ::= '<' typeifier ( ',' typeifier )* '>'
    private void functionTypeParams() {
        match(TokenType.LT);
        typeifier();

        while(nextLA(TokenType.COMMA)) {
            match(TokenType.COMMA);
            typeifier();
        }
        match(TokenType.GT);
    }


    // 39. typeifier ::= ( 'discr' | 'scalar' | 'class' )? ID
    private void typeifier() {
        if(nextLA(TokenType.DISCR)) match(TokenType.DISCR);
        else if(nextLA(TokenType.SCALAR)) match(TokenType.SCALAR);
        else if(nextLA(TokenType.CLASS)) match(TokenType.CLASS);
        else throw new IllegalStateException("Error! Invalid function typeifer!");

        match(TokenType.ID);
    }


    /*
    ------------------------------------------------------------
                          MAIN FUNCTION
    ------------------------------------------------------------
    */


    // 40. main ::= 'def' 'main' args? '=>' return_type block_statement
    private void mainFunc() {
        match(TokenType.DEF);
        match(TokenType.MAIN);
        if(nextLA(TokenType.LPAREN)) args();
        match(TokenType.ARROW);
        returnType();
        blockStatement();
    }


    // 41. args ::= '(' formal_params? ')'
    private void args() {
        match(TokenType.LPAREN);
        if(nextLA(TokenType.IN) || nextLA(TokenType.OUT) || nextLA(TokenType.INOUT) || nextLA(TokenType.REF))
            formalParams();
        match(TokenType.RPAREN);
    }


    // 42. block-statement ::= '{' declaration* statement* '}'
    private void blockStatement() {
        match(TokenType.LBRACE);
        while(nextLA(TokenType.DEF)) declaration();

        ArrayList<TokenType> statementToks = expectedBodyToks();
        while(anyLA(statementToks)) statement();

        match(TokenType.RBRACE);
    }


    // 43. declaration ::= 'def' 'local'? variable_decl
    private void declaration() {
        match(TokenType.DEF);
        if(nextLA(TokenType.LOCAL)) match(TokenType.LOCAL);
        variableDecl();
    }


    /*
    ------------------------------------------------------------
                             STATEMENTS
    ------------------------------------------------------------
    */

    // TODO: FOR STATEMENT
    // 44. statement ::=    'stop'
    //    | return_statement
    //    | assignment_statement
    //    | block_statement
    //    | if_statement
    //    | while_statement
    //    | do_while_statement
    //    | choice_statement
    //    | input_statement
    //    | output_statement
    private void statement() {
        if(nextLA(TokenType.STOP)) match(TokenType.STOP);
        else if(nextLA(TokenType.RETURN)) returnStatement();
        else if(nextLA(TokenType.LBRACE)) blockStatement();
        else if(nextLA(TokenType.IF)) ifStatement();
        else if(nextLA(TokenType.WHILE)) whileStatement();
        else if(nextLA(TokenType.DO)) doWhileStatement();
        else if(nextLA(TokenType.CHOICE)) choiceStatement();
        else if(nextLA(TokenType.CIN)) inputStatement();
        else if(nextLA(TokenType.COUT)) outputStatement();
        else assignmentStatement();
    }


    // 45. return_statement ::= expression?
    private void returnStatement() {
        match(TokenType.RETURN);
        ArrayList<TokenType> exprFirstSet = firstSetExpression();
        if(anyLA(exprFirstSet)) expression();
    }


    // 46. assignment_statement ::= 'set' expression assignment_operator expression
                            //    |  logical_or_expression
    private void assignmentStatement() {
        if(nextLA(TokenType.SET)) {
            match(TokenType.SET);
            expression();
            assignmentOperator();
            expression();
        }
        else logicalOrExpression();
    }


    //TODO: Add new operators
    // 47. assignment_operator ::= '=' | '+=' | '-=' | '*=' | '/=' | '%=' | '**='
    private void assignmentOperator() {
        if(nextLA(TokenType.EQ)) match(TokenType.EQ);
        else throw new IllegalStateException("Error! Invalid assignment operator.");
    }


    // 48. if_statement ::= if expression block_statement ( elseif_statement )* ( 'else' block_statement)?
    private void ifStatement() {
        match(TokenType.IF);
        expression();
        blockStatement();
